style Navbar component, cannot fix Navbar-menu offset when viewed on mobile screen

--- a/app/assets/scripts/App.css
+++ b/app/assets/scripts/App.css
@@ -3,4 +3,5 @@
 body {
 	margin: 0;
 	font-family: 'Nunito', sans-serif;
+	box-sizing: border-box;
 }
