--- a/app/assets/scripts/components/Navbar.css
+++ b/app/assets/scripts/components/Navbar.css
@@ -19,7 +19,8 @@
   color: yellow;
   cursor: pointer;
   text-decoration: none;
-  font-size: 3rem;
+  font-size: 2.5rem;
+  font-weight: 600;
   display: flex;
   align-items: center;
 }
@@ -29,8 +30,85 @@
 	margin-left: 1rem;
 }
 
+.Navbar-menu{
+	display: flex;
+	list-style: none;
+  	text-align: center;
+  	align-items: center;
+  	margin-right: 2rem;
+}
 
+.Navbar-link{
+	color: yellow;
+  	display: flex;
+  	align-items: center;
+  	text-decoration: none;
+  	padding: 0.5rem 1rem;
+  	height: 100%;
+}
+
+.Navbar-link:hover {
+  color: white;
+  transition: all 0.2s ease-out;
+}
+
+.Navbar-link:active {
+  color: white;
+  font-weight: 600;
+}
+
+.Navbar-hamburger {
+  display: none;
+}
+
+.fa-bars {
+  color: yellow;
+}
 
 @media screen and (max-width: 960px) {
-  
+
+	.Navbar-logo {
+	  font-size: 1.5rem;
+	}
+   .Navbar-menu {
+    flex-direction: column;
+    width: 100%;
+    height: 90vh;
+    position: absolute;
+    top: 64px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+
+  .Navbar-menu.active {
+    background: rgba(0, 0, 0, .9);
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
+
+  .Navbar-link {
+    text-align: center;
+    padding: 1rem;
+    width: 100%;
+  }
+
+
+
+  .Navbar-hamburger {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
+  }
+
+  .fa-times {
+    color: yellow;
+    font-size: 2rem;
+  }
 }
